--- a/memeApp/Base.lproj/Main.storyboard
+++ b/memeApp/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--First View Controller-->
@@ -17,33 +17,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Ca-gR-ZKx">
-                                <rect key="frame" x="182" y="182" width="0.0" height="0.0"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHF-gE-3Kh">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hnv-Hb-su3"/>
+                                    <barButtonItem style="plain" systemItem="camera" id="TmV-1A-j3e">
+                                        <connections>
+                                            <action selector="cameraButton:" destination="Kml-62-2J3" id="6ab-YX-nN5"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LLg-pw-iaQ"/>
+                                    <barButtonItem title="Album" id="oj0-f6-EPe">
+                                        <connections>
+                                            <segue destination="pGg-6v-bdr" kind="show" id="QgD-ea-uoK"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aQZ-XH-IOj"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Ca-gR-ZKx">
+                                <rect key="frame" x="0.0" y="64" width="607" height="492"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nN0-ky-rmN">
-                                <rect key="frame" x="273" y="187" width="62" height="62"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="62" id="X9i-C2-pFr"/>
-                                    <constraint firstAttribute="width" secondItem="nN0-ky-rmN" secondAttribute="height" multiplier="1:1" id="hPC-Jh-VYB"/>
-                                    <constraint firstAttribute="width" constant="62" id="ldE-ge-vPX"/>
-                                </constraints>
-                                <state key="normal" title="camera" image="IconCamera7os">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="pGg-6v-bdr" kind="show" id="5CC-ef-dIm"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="nN0-ky-rmN" secondAttribute="centerY" constant="82" id="Dkv-nF-132"/>
-                            <constraint firstAttribute="centerX" secondItem="nN0-ky-rmN" secondAttribute="centerX" constant="-4" id="ysq-xc-WVN"/>
+                            <constraint firstItem="LHF-gE-3Kh" firstAttribute="leading" secondItem="t1r-1x-al6" secondAttribute="leading" id="9MV-Qg-ltc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0Ca-gR-ZKx" secondAttribute="trailing" constant="-23" id="CpV-dD-zmX"/>
+                            <constraint firstItem="0Ca-gR-ZKx" firstAttribute="bottom" secondItem="LHF-gE-3Kh" secondAttribute="top" id="H68-3K-VMU"/>
+                            <constraint firstItem="0Ca-gR-ZKx" firstAttribute="top" secondItem="Z8o-FT-hyM" secondAttribute="bottom" id="dGe-cJ-Eu2"/>
+                            <constraint firstItem="0Ca-gR-ZKx" firstAttribute="leading" secondItem="LHF-gE-3Kh" secondAttribute="leading" id="gct-pl-ILd"/>
+                            <constraint firstAttribute="trailing" secondItem="LHF-gE-3Kh" secondAttribute="trailing" id="icF-dQ-wL5"/>
+                            <constraint firstItem="LHF-gE-3Kh" firstAttribute="bottom" secondItem="btF-2G-SdU" secondAttribute="top" id="jc7-N6-GAa"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zlC-cx-KIq"/>
                     <connections>
-                        <outlet property="cameraButtonOutlet" destination="nN0-ky-rmN" id="EHp-wI-iVS"/>
+                        <outlet property="imageView" destination="0Ca-gR-ZKx" id="JiF-08-yUa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Km-PW-dt7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -53,7 +62,8 @@
         <!--Master-->
         <scene sceneID="cUi-kZ-frf">
             <objects>
-                <navigationController title="Master" toolbarHidden="NO" id="rS3-R9-Ivy" sceneMemberID="viewController">
+                <navigationController title="Master" id="rS3-R9-Ivy" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="yXu-0R-QUA">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -148,7 +158,4 @@
             <point key="canvasLocation" x="1343" y="64"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="IconCamera7os" width="421" height="428"/>
-    </resources>
 </document>
