remove self references

--- a/memeApp/Base.lproj/Main.storyboard
+++ b/memeApp/Base.lproj/Main.storyboard
@@ -340,7 +340,7 @@
         <image name="table_90x90" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="jUr-3t-vfg"/>
         <segue reference="pVJ-Hl-JXq"/>
-        <segue reference="hcq-Yk-JYr"/>
     </inferredMetricsTieBreakers>
 </document>
