--- a/memeApp/Base.lproj/Main.storyboard
+++ b/memeApp/Base.lproj/Main.storyboard
@@ -16,6 +16,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHF-gE-3Kh">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hnv-Hb-su3"/>
+                                    <barButtonItem style="plain" systemItem="camera" id="TmV-1A-j3e">
+                                        <connections>
+                                            <action selector="cameraButton:" destination="Kml-62-2J3" id="6ab-YX-nN5"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LLg-pw-iaQ"/>
+                                    <barButtonItem title="Album" id="oj0-f6-EPe">
+                                        <connections>
+                                            <action selector="albumButton:" destination="Kml-62-2J3" id="n5E-gy-4c4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aQZ-XH-IOj"/>
+                                </items>
+                            </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktD-RT-6vJ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                                 <subviews>
@@ -53,24 +71,6 @@
                                     <constraint firstAttribute="bottom" secondItem="0Ca-gR-ZKx" secondAttribute="bottom" id="yrZ-L1-D29"/>
                                 </constraints>
                             </view>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHF-gE-3Kh">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hnv-Hb-su3"/>
-                                    <barButtonItem style="plain" systemItem="camera" id="TmV-1A-j3e">
-                                        <connections>
-                                            <action selector="cameraButton:" destination="Kml-62-2J3" id="6ab-YX-nN5"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LLg-pw-iaQ"/>
-                                    <barButtonItem title="Album" id="oj0-f6-EPe">
-                                        <connections>
-                                            <action selector="albumButton:" destination="Kml-62-2J3" id="n5E-gy-4c4"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aQZ-XH-IOj"/>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -97,6 +97,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="albumLabel" destination="oj0-f6-EPe" id="vFq-bE-Y9R"/>
                         <outlet property="bottomText" destination="hUq-Nw-Axh" id="978-tP-3qS"/>
                         <outlet property="cameraLabel" destination="TmV-1A-j3e" id="6BS-bo-QSu"/>
                         <outlet property="cancelLabel" destination="Xvh-11-6Bn" id="DBc-8C-0FD"/>
@@ -203,7 +204,7 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="Ah7-4n-0Wa" kind="show" id="hcq-Yk-JYr"/>
+                                    <segue destination="Ah7-4n-0Wa" kind="show" identifier="showDetail" id="hcq-Yk-JYr"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -247,7 +248,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="P3y-bn-eWc"/>
                                     <barButtonItem style="plain" systemItem="trash" id="lvS-d1-rzE">
                                         <connections>
-                                            <action selector="cameraButton:" destination="Kml-62-2J3" id="atG-Ey-HcM"/>
+                                            <action selector="deteleCurrentMeme:" destination="Ah7-4n-0Wa" id="ig4-aG-62U"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="epw-OD-4RH"/>
