--- a/memeApp/Base.lproj/Main.storyboard
+++ b/memeApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHF-gE-3Kh">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="507" width="600" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Hnv-Hb-su3"/>
                                     <barButtonItem style="plain" systemItem="camera" id="TmV-1A-j3e">
@@ -35,13 +35,13 @@
                                 </items>
                             </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktD-RT-6vJ">
-                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="443"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Ca-gR-ZKx">
-                                        <rect key="frame" x="-4" y="0.0" width="607" height="536"/>
+                                        <rect key="frame" x="-4" y="0.0" width="607" height="443"/>
                                     </imageView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="bottomText" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="hUq-Nw-Axh">
-                                        <rect key="frame" x="144" y="429" width="310" height="61"/>
+                                        <rect key="frame" x="144" y="336" width="310" height="61"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="61" id="OVX-ZS-eJ1"/>
                                         </constraints>
@@ -102,6 +102,7 @@
                         <outlet property="cameraLabel" destination="TmV-1A-j3e" id="6BS-bo-QSu"/>
                         <outlet property="cancelLabel" destination="Xvh-11-6Bn" id="DBc-8C-0FD"/>
                         <outlet property="imageView" destination="0Ca-gR-ZKx" id="JiF-08-yUa"/>
+                        <outlet property="navigationTitle" destination="zlC-cx-KIq" id="fiR-Hf-QzV"/>
                         <outlet property="shareLabel" destination="1fK-VX-6Xe" id="Fbv-MP-pmk"/>
                         <outlet property="topText" destination="5mM-ms-GIr" id="R3y-Cu-2rd"/>
                         <outlet property="viewComposite" destination="ktD-RT-6vJ" id="ip9-vC-pQu"/>
@@ -329,7 +330,13 @@
                             <outlet property="delegate" destination="Grf-0C-TQo" id="Thh-8j-FIm"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Memes" id="tvG-FY-uZS"/>
+                    <navigationItem key="navigationItem" title="Memes" id="tvG-FY-uZS">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Nrp-6a-4qH">
+                            <connections>
+                                <segue destination="Kml-62-2J3" kind="show" identifier="presentCamera" id="EQC-kd-8c6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKX-0x-9vs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -360,8 +367,8 @@
         <image name="table_90x90" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JOQ-ti-b44"/>
-        <segue reference="hcq-Yk-JYr"/>
+        <segue reference="LwO-gn-8pL"/>
         <segue reference="pVJ-Hl-JXq"/>
+        <segue reference="hcq-Yk-JYr"/>
     </inferredMetricsTieBreakers>
 </document>
